# cpp-merkle-patricia-trie

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpp_merkle_patricia_trie
include/: db.h  encoding.h  full_node.h  hash_node.h  hasher.h  logger.h  memory_db.h  merkle_patricia_trie.pb.h  node.h  short_node.h  trie.h  trie_reader.h  utils.h  value_node.h
proto/: merkle_patricia_trie.pb-c.c  merkle_patricia_trie.pb-c.h  merkle_patricia_trie.pb.cc  merkle_patricia_trie.pb.h
src/: encoding.cpp  full_node.cpp  hash_node.cpp  hasher.cpp  logger.cpp  main.cpp  memory_db.cpp  node.cpp  short_node.cpp  trie.cpp  trie_reader.cpp  utils.cpp  value_node.cpp
web_assembly/: Makefile  index.js  merkle_patricia_trie.js  merkle_patricia_trie.wasm  test.html
web_assembly/include/: js_fetch_db.h
web_assembly/src/: export.cpp  js_fetch_db.cpp
